# SDK

./: .gitignore  README.md  github.txt
Dll/Win32/: VDSO.lib
Dll/X64/: VDSO.lib
DllTest/: CMakeLists.txt  DllTest.cpp  DllTest.h
DllTest/DllTest/: CMakeLists.txt  DllTest.cpp  DllTest.h
DllTestQt/: CMakeLists.txt  main.cpp  vmmso.qrc  vmusbwave.cpp  vmusbwave.h
DllTestQt/DllTestQt/: CMakeLists.txt  CMakeLists.txt.user.6d2499e  main.cpp  qtquickcontrols2.conf  vmusbwave.cpp  vmusbwave.h
DllTestQt/DllTestQt/plot/: Axis.cpp  Axis.h  PlotAxis.h  PlotBasic.cpp  PlotHelp.cpp  SimplePlotBasic.cpp  SimplePlotBasic.h  VmSimplePlot.cpp  VmSimplePlot.h  plottype.h
DllTestQt/DllTestQt/qml/: main.qml
DllTestQt/plot/: Axis.h  PlotAxis.cpp  PlotAxis.h  PlotBasic.h  PlotHelp.cpp  PlotHelp.h  SimplePlotBasic.cpp  VmSimplePlot.cpp  VmSimplePlot.h
DllTestQt/qml/: main.qml
SharedLibrary/: VdsoLib.h
SharedLibrary/Linux/: libusb compile.txt
SharedLibrary/Linux/AMR64/Release/: libcommon.so.1.0  libfilemng.so.1.0  libsignal.so.1.0  libusbwave.so.1.0  libvdso.so.1.0  libwaveprocess.so.1.0  libwavesource.so.1.0
SharedLibrary/Linux/X64/Debug/: DllTest
SharedLibrary/Linux/X64/Release/: DllTest  libcommon.so.1.0  libfilemng.so.1.0  libsignal.so.1.0  libusbwave.so.1.0  libvdso.so.1.0  libwaveprocess.so.1.0  libwavesource.so.1.0
SharedLibrary/Linux/aarch64-linux/Release/: DllTest  libvdso.so.1.0
SharedLibrary/Linux/arm-linux-gnueabi/Release/: DllTest  libcommon.so.0.1  libcommon.so.1.0  libfilemng.so.1.0  libsignal.so.1.0  libusbwave.so.1.0  libvdso.so.1.0  libwaveprocess.so.1.0  libwavesource.so.1.0
SharedLibrary/Linux/arm-linux-gnueabihf/Release/: DllTest  libfilemng.so.1.0  libusbwave.so.1.0  libvdso.so.1.0  libwaveprocess.so.1.0  libwavesource.so.1.0
SharedLibrary/Windows/: Depend Dynamic library ╥└└╡╢»╠¼┐Γ.txt
SharedLibrary/Windows/AMR64/Debug/: vdso.exp
SharedLibrary/Windows/AMR64/Release/: common.exp  filemng.exp  signal.exp  usbwave.exp  vdso.exp  vdso.lib  vmusbwave.exp  waveprocess.exp  wavesource.exp
SharedLibrary/Windows/X64/Debug/: vdso.exp  vdso.lib
SharedLibrary/Windows/X64/Release/: common.exp  filemng.exp  signal.exp  usbwave.exp  vdso.exp  vdso.lib  vmusbwave.exp  waveprocess.exp  wavesource.exp
SharedLibrary/Windows/X86/Debug/: vdso.exp
SharedLibrary/Windows/X86/Release/: common.exp  filemng.exp  signal.exp  usbwave.exp  vdso.exp  vdso.lib  vmusbwave.exp  waveprocess.exp  wavesource.exp
demo-Labview/Source/: LabviewDemo.vi
demo-VC/: AdvPlot.cpp  AdvPlot.h  AdvPlotBasic.h  DLLTEST.cpp  DLLTEST.h  DLLTEST.rc  DLLTEST.sln  DLLTEST.vcxproj  DLLTEST.vcxproj.filters  DLLTESTDlg.cpp  DLLTESTDlg.h  MyMemDC.h  ReadMe.txt  RoundSliderCtrl.cpp  RoundSliderCtrl.h  SampleRoundSliderCtrl.cpp  SampleRoundSliderCtrl.h  TimeRoundSliderCtrl.cpp  TimeRoundSliderCtrl.h  VdsoLib.h  VlgRoundSliderCtrl.cpp  VlgRoundSliderCtrl.h  lineattribute.cpp  lineattribute.h  resource.h  stdafx.cpp  stdafx.h
dome-Python/: how to run.txt  test.py
linux/: libcommon.so.1.0  libfilemng.so.1.0  libsignal.so.1.0  libusbwave.so.1.0  libvdso.so.1.0  libwaveprocess.so.1.0  libwavesource.so.1.0
windows/Dll/: Depend Dynamic library 依赖动态库.txt
windows/Dll/X64/: VdsoLib.h
windows/windows debug/: How to get dll debug info.txt
